plugins {
    id 'application'
    id 'java-library'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'maven-publish'
}

group = 'com.github.capdevon'
version = '1.0.0-SNAPSHOT'
description = 'JME Video Player'

application {
    mainClass = 'mygame.Test_BrickWall'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
    
    withSourcesJar()
    withJavadocJar()
}

project.ext {
    jmeVersion = '3.9.0-stable'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-Xdiags:verbose'
    options.compilerArgs << '-Xlint:unchecked'
    options.deprecation = true
    options.encoding = 'UTF-8'
}

tasks.withType(JavaExec).configureEach {
    enableAssertions = true
    jvmArgs(
        '-XX:+UseG1GC', 
        '-XX:MaxGCPauseMillis=10',
        '--add-opens=javafx.media/javafx.scene.media=ALL-UNNAMED',
        '--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
        '--add-exports=javafx.media/com.sun.media.jfxmedia=ALL-UNNAMED',
        '--add-exports=javafx.media/com.sun.media.jfxmedia.events=ALL-UNNAMED',
        '--add-exports=javafx.media/com.sun.media.jfxmedia.control=ALL-UNNAMED'
    )
}

javafx {
    version = '17'
    modules = [
        'javafx.base',
        'javafx.controls',
        'javafx.fxml',
        'javafx.swing',
        'javafx.media'
    ]
}

repositories {
    mavenCentral()
}

dependencies {
    // jMonkeyEngine core & desktop
    implementation "org.jmonkeyengine:jme3-core:${jmeVersion}"
    implementation "org.jmonkeyengine:jme3-desktop:${jmeVersion}"
    implementation "org.jmonkeyengine:jme3-effects:${jmeVersion}"
    implementation "org.jmonkeyengine:jme3-terrain:${jmeVersion}"
    
    if (!System.getProperty("os.name").toLowerCase().contains("mac")) {
        runtimeOnly "org.jmonkeyengine:jme3-awt-dialogs:${jmeVersion}"
    }

    implementation 'com.github.stephengold:Minie:9.0.3+big4'

    // LWJGL 3 backend
    runtimeOnly "org.jmonkeyengine:jme3-lwjgl3:${jmeVersion}"

    // Audio & Plugins runtime
    runtimeOnly "org.jmonkeyengine:jme3-jogg:${jmeVersion}"
    runtimeOnly "org.jmonkeyengine:jme3-plugins:${jmeVersion}"
    runtimeOnly "org.jmonkeyengine:jme3-testdata:${jmeVersion}"
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

tasks.register('install') {
    group = 'publishing'
    description = 'Installs the plugin to the local Maven repository.'
    dependsOn tasks.named('publishToMavenLocal')

    doLast {
        println "\n[SUCCESS] ${project.group}:${project.name}:${project.version} installed to Maven Local."
    }
}

clean.dependsOn('cleanDLLs', 'cleanDyLibs', 'cleanLogs', 'cleanSOs')

tasks.register('cleanDLLs', Delete) {
    delete fileTree(dir: '.', include: '*.dll')
}
tasks.register('cleanDyLibs', Delete) {
    delete fileTree(dir: '.', include: '*.dylib')
}
tasks.register('cleanLogs', Delete) {
    delete fileTree(dir: '.', include: 'hs_err_pid*.log')
}
tasks.register('cleanSOs', Delete) {
    delete fileTree(dir: '.', include: '*.so')
}